@@ -1,17 +1,20 @@
 AUX 5.5/26-main_tomcat_catalina_jasper_build_xml.patch 16573 RMD160 53f1deaa88a39459a584cf14c761cb411d68f2e6 SHA1 69b3ca39f9dbabe12c56865d47866c06dcb7c2e3 SHA256 99a2c1bb164d97407525305512a85e6139531d81a47aa2c25f5c2cfe50aee1f6
 AUX 5.5/5.5.27-dynamic-JSSE13Factory.patch 1853 RMD160 31d20202a3be06c156b0c13f0afb3b394b8ecf02 SHA1 d7e7640dd4f7b7b92b21ac51d1b508fe56691a81 SHA256 f7db0e692088ec25a4731a521c1da4a0075e747f68690235fde3ca93c6f2e19d
 AUX 5.5/catalina.policy 10897 RMD160 d6accc56803b132d0e82e163cc583464c38248ef SHA1 585f80e24cad7e5927f8c2c6ad03f668eb904cc1 SHA256 8188db94772eb00d44b28cb9b40e9ccf30803acf576c0af1be5844ebd35d763c
+AUX 5.5/examples-cal.patch 577 RMD160 bab060b0c65b5a72ebaae6b39721c593d2847282 SHA1 0d00e4f166a7567e1c5158b5058fbd15f559410c SHA256 8dfef4e542a674fbd5daa061dc5a04e45c8ed9752e769afd92a2725264ad1bbe
 AUX 5.5/jsr152_jsr154_examples_build_xml.patch 2478 RMD160 39a279b0f64bcf112fdaa26c51e3aaa2c7f7a089 SHA1 15857d3b5eaadd6c11bf271f7e7d4705aface448 SHA256 cdc63acd96a3d13d32c37fcbd975f85d38309a0df87a36bf8f49347dc34a181c
 AUX 5.5/tomcat.conf.2 2927 RMD160 cc5faf4a3774e7498f2c6fe0d652f4ed2cf2a2fd SHA1 84bc4df821e08e3bab86329261f26e74de2a543e SHA256 109ad0c20f64b9ad9c60cca53a42fca7ba547ab27d8efdba1ef77732600af9dd
 AUX 5.5/tomcat.init.3 4456 RMD160 c796c7f7c43edfccc3d0f943b4b9f10f0c64ef39 SHA1 5f9f1864e29fb5070178d90a2fb3c2ce892923ab SHA256 b882c62e114d7ad61fb767b57498709e26596bba27f66bc1002e48de6816e437
 AUX 6/build-xml.patch 2786 RMD160 7d05d8c4ddcadf882f918e54c8c51c9c54782944 SHA1 944111d0faacf74c7daabcd3aa07cd68daf4a317 SHA256 ef0d6b59aa09e44c789157200dc472331d46ca30434dfec020edeabf40ca9f30
 AUX 6/catalina.policy 6956 RMD160 957ad3b5dc4aeaa5acd289cdaada0a2e48974d52 SHA1 13b65455c8f52fff9d1b09ea67e93ec7a88f1a47 SHA256 9399efda3f6cfc238fb783fb338060e67aff15d0044b31c3d0265e1f9e5769e5
-AUX 6/tomcat-openrc.init 3632 RMD160 89a24d103b22ae9616fd699843fcb364769c4fe3 SHA1 5e05d7ccbebcfa845d8c315332dea6135aec2131 SHA256 08579d873b74da0b60872918e437986d4f0f549cf39fea5dd01a0a2bebfb5d48
+AUX 6/examples-cal.patch 565 RMD160 85294480f354eb19340bdc7357690ae55ef5a89f SHA1 e9550e02500f2d9da6f4f7b3c7ca79c1934318ea SHA256 caf76c88d3b67d29a7aadca1485accd01270d986e7bc77281a9b30f0b1582b55
 AUX 6/tomcat.conf 2895 RMD160 36ece62ddff5257c04f47d75b9c77bd4dc198652 SHA1 8fef42463b7bf186e2f1d1aeb083bdb370603265 SHA256 b04b085618be755ad9e1796fcbcbb8c2e192eefda3b240f1c06b0d9cc88f2ff0
 AUX 6/tomcat.init.2 4118 RMD160 dc077b83f3d2ae8b04935b360ea8bafc2b3c41fc SHA1 30e167422d6a548f78300c6712ee2cbd474e3d0b SHA256 1377ae67d963ef96ba29763d3a00d80ecc0c0ede83888b1c0d267305ecc35164
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d06535050b6a93 SHA1 9182b0d6b2d0cb2d60f04be6211f3b3516bc518e SHA256 f5ad5dd12e221d75e25234ca734fb434cf45f3fcea93623232a73dc9bfd03dc4
 EBUILD tomcat-5.5.27-r5.ebuild 12018 RMD160 41576e72f8385db5531d452a70dae55832b7521c SHA1 fa592b415bf4f13344695acf2b76ecff49c0b809 SHA256 96d51db2fb8a3ce41ef033c91a9bfe2e1e34d93240305f4dfcf3e862afe371f5
-EBUILD tomcat-6.0.18-r5.ebuild 11555 RMD160 7d63d4c21dcc2b19e62f038656f42f7a272d8584 SHA1 fb5fd941aeaea7bb88c8b7e93c5b96e9932e8160 SHA256 6624723b81e5210d319116bfe7fbc5e4f164b4f0ec9b83b867bbe32b1f03e181
-MISC ChangeLog 57600 RMD160 05b69cc65b75cd8009579b287a3fa1f76fecbb9f SHA1 ad4638f0bf4f73e5dd29c4750a5221b86030f0ef SHA256 eb259abe032e087338c076e084255f01c551c03f975aca590cf9d5d43bde4f7a
+EBUILD tomcat-5.5.27-r6.ebuild 12189 RMD160 8da2963af42d30afbcb95e598246bfd55d88b0df SHA1 4eab1fe30c350265564322841a4da4e7b40a8dbd SHA256 97ec71a8693e179e2e16550099f16b9cadf2d5730d179f18ec792c0258a07e10
+EBUILD tomcat-6.0.18-r5.ebuild 11554 RMD160 7b534480fd9e55b33c1a9c6953ac6c936448f59a SHA1 c2c6f0ed393020259a759f9e982a74b94e52e355 SHA256 0e6da63427bbe26672a168de1a33cf214dec182c4fbede10a635107c1eac3fe3
+EBUILD tomcat-6.0.18-r6.ebuild 11620 RMD160 542070d832fa268d1dac25c023b59d4b109509b9 SHA1 2a6da75e89c0b1a2c81faa4b3b74e8d83fe988f7 SHA256 581cc6050ef0bdeed69921ae4c290f1582dc73647e6713f80ca57c4d8400b59f
+MISC ChangeLog 57709 RMD160 dcc1156d5a4f26c4f0b952cde07b8f97f2ff2c70 SHA1 5cdb34b5ad6b5a91429cb3743ddd193ac4093214 SHA256 baf3e05eba10f2b0578858425774f9f33db418c715a6c80714c13708a9956127
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
