@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.204 2008/12/20 18:12:22 serkan Exp $
 
+  06 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
+  security fixes for bug #261469 and webapp fixes
+
   04 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
   symlink fix and webapp fixed, thanks jieryn-w
 
